--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   firebase_messaging: ^14.7.19
   shared_preferences: ^2.2.3
+  timezone: ^0.9.4
+  flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
